Task 1.6: Implement ProductListPageServletTest + fix ArrayListProductDao